# MPC-PID-simulator

./: .gitignore  CMakeLists.txt  HybridController.cpp  HybridController.h  IController.h  ISystemModel.h  MPCController.cpp  MPCController.h  PIDController.cpp  PIDController.h  README.md  ThermalSystem.cpp  ThermalSystem.h  constants.h  hybrid_controller.cpp  hybrid_controller.h  main.cpp  mpc_controller.cpp  mpc_controller.h  pid_controller.cpp  pid_controller.h  simulation.cpp  simulation.h  thermal_system.cpp  thermal_system.h
